--- a/templates/blog.html
+++ b/templates/blog.html
@@ -18,21 +18,23 @@
     <section class="ftco-section">
       <div class="container">
         <div class="row d-flex">
+          {% for blog in blogs %}
           <div class="col-md-3 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
               <div class="text">
-                <a href="{% url 'blog-single' %}" class="block-20 img" style="background-image: url('{% static 'images/image_1.jpg' %}');">
+                <a href="{% url 'blog-single' %}" class="block-20 img" style="background-image: url('blog.image.url');">
 	              </a>
 	              <div class="meta mb-3">
-                  <div><a href="#">June 01, 2020</a></div>
+                  <div><a href="#">{{ blog.date }}</a></div>
                   <div><a href="#">Admin</a></div>
-                  <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
+                  <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span>{{ blog.number }}</a></div>
                 </div>
-	              <h3 class="heading"><a href="#">Why Lead Generation is Key for Business Growth</a></h3>
+	              <h3 class="heading"><a href="#">{{ blog.text }}</a></h3>
               </div>
             </div>
           </div>
-          <div class="col-md-3 d-flex ftco-animate">
+          {% endfor %}
+          {% comment %} <div class="col-md-3 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
               <div class="text">
                 <a href="{% url 'blog-single' %}" class="block-20 img" style="background-image: url('{% static 'images/image_2.jpg' %}');">
@@ -130,8 +132,8 @@
 	              <h3 class="heading"><a href="#">Why Lead Generation is Key for Business Growth</a></h3>
               </div>
             </div>
-          </div>
-        </div>
+          </div>{% endcomment %}
+        </div> 
         <div class="row mt-5">
           <div class="col text-center">
             <div class="block-27">
