--- a/templates/properties.html
+++ b/templates/properties.html
@@ -104,13 +104,15 @@
           </div>
         </div>
         <div class="row">
+		 {% for announcement in announcements %}
         	<div class="col-md-4">
+			
         		<div class="property-wrap ftco-animate">
-        			<a href="{% url 'properties-single' %}" class="img" style="background-image: url({% static 'images/work-1.jpg' %});">
+        			<a href="{% url 'properties-single' %}" class="img" style="background-image: url('{{ announcement.image.url }}');">
         				<div class="rent-sale">
-        					<span class="sale">Sale</span>
+        					<span class="{% if announcement.type == 'sale' %}sale{% endif %}">{{ announcement.type }}</span>
         				</div>
-        				<p class="price"><span class="orig-price">$300,000</span></p>
+        				<p class="price"><span class="orig-price">{{ announcement.price}}</span></p>
         			</a>
         			<div class="text">
         				<ul class="property_list">
@@ -118,22 +120,23 @@
         					<li><span class="flaticon-bathtub"></span>2</li>
         					<li><span class="flaticon-floor-plan"></span>1,878 sqft</li>
         				</ul>
-        				<h3><a href="#">The Blue Sky Home</a></h3>
-        				<span class="location">Oakland</span>
+        				<h3><a href="#">{{ announcement.title}}</a></h3>
+        				<span class="location">{{ announcement.region}}</span>
         				<a href="#" class="d-flex align-items-center justify-content-center btn-custom">
         					<span class="fa fa-link"></span>
         				</a>
         				<div class="list-team d-flex align-items-center mt-2 pt-2 border-top">
         					<div class="d-flex align-items-center">
-	        					<div class="img" style="background-image: url({% static 'images/person_1.jpg' %});"></div>
-	        					<h3 class="ml-2">John Dorf</h3>
+	        					<div class="img" style="background-image: url('{{ announcement.image_person.url }}');"></div>
+	        					<h3 class="ml-2">{{ announcement.person_name }}</h3>
 	        				</div>
-	        				<span class="text-right">2 weeks ago</span>
+	        				<span class="text-right">{{ announcement.date }}</span>
         				</div>
         			</div>
         		</div>
         	</div>
-        	<div class="col-md-4">
+		 {% endfor %}
+        	{% comment %} <div class="col-md-4">
         		<div class="property-wrap ftco-animate">
         			<a href="{% url 'properties-single' %}" class="img" style="background-image: url({% static 'images/work-2.jpg' %});">
         				<div class="rent-sale">
@@ -278,7 +281,7 @@
         				</div>
         			</div>
         		</div>
-        	</div>
+        	</div> {% endcomment %}
         </div>
         <div class="row mt-5">
           <div class="col text-center">
