--- a/templates/agent.html
+++ b/templates/agent.html
@@ -127,7 +127,7 @@
     				</div>
         	</div>
         </div>
-    	</div>
-    </section> {% endcomment %}
+    	</div>{% endcomment %}
+    </section> 
 
 {% endblock content%}
