--- a/templates/reset_password/password_reset_form.html
+++ b/templates/reset_password/password_reset_form.html
@@ -3,10 +3,10 @@
 <html>
 	<head>
 		<title>Reset password</title>
-		<link rel="stylesheet" type="text/css" href="{% static 'css/css_main.css' %}">
+		
 	</head>
-	<body>
-		<div class="container">
+	<body style="background-image: url('{% static 'images/body-bg.jpg' %}')">
+		<div class="container" style="margin: 150px auto; width: 400px; padding:50px; background-color:rgba(177, 135, 77, 0.75) ">
 			<div class="header">
 				<h2>Yangi parolni kiriting</h2>
 			</div>
