--- a/templates/accounts/sign_in.html
+++ b/templates/accounts/sign_in.html
@@ -12,42 +12,45 @@
 
 		<!-- Main css -->
 		<link rel="stylesheet" href="{% static 'css/style1.css' %}">
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	</head>
 	<body style="background-image: url('{% static 'images/body-bg.jpg' %}')">
-
+		
 		<div class="main" style="height: 100vh;">
 			{% if messages %}
 				{% for m in messages %}
-				<div class="alert alert-danger alert-dismissible fade show" role="alert">
-					{{ m }}
-					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-						<span aria-hidden="true">&times;</span>
-					</button>
-				</div>
+					<div class="alert alert-warning alert-dismissible fade show" style="position: absolute; width: 100%; z-index: 20; top: -75px;" role="alert">
+						{{ m }}
+						<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
 				{% endfor %}
 			{% endif %}
 
 			<div class="container" style="background-image: url('{% static 'images/container-bg.png' %}')">
 					
 				<div class="signup-content">
-					<form method="POST" id="signup-form" class="signup-form">
+					<form method="POST" id="signup-form" class="signup-form" action="{% url 'sign_in' %}">
 						{% csrf_token %}
 						<h2>Sign in </h2>
 						<p class="desc">Xush kelibsiz hurmatli foydalanuvchi !</p>
 												
 						<div class="form-group">
-							<input type="text" class="form-input"  name="username" id="name" placeholder="User Name"/>
+							{% comment %} <input type="text" class="form-input"  name="username" id="name" placeholder="User Name"/> {% endcomment %}
+							{{ form.username}}
 						</div>
 						<div class="form-group">
 							
 						</div>
 						<div class="form-group">
-							<input type="text" class="form-input" name="password" id="password" placeholder="Password"/>
+							{% comment %} <input type="text" class="form-input" name="password" id="password" placeholder="Password"/> {% endcomment %}
+							{{ form.password}}
 							<span toggle="#password" class="zmdi zmdi-eye field-icon toggle-password"></span>
 						</div>
 						<div class="form-group">
 							<input type="checkbox" name="agree-term" id="agree-term" class="agree-term" />
+							{% comment %} {{ form.checkbox}} {% endcomment %}
 							<label for="agree-term" class="label-agree-term"><span><span></span></span>I agree all statements in  <a href="#" class="term-service">Terms of service</a></label>
 						</div>
 						<div class="form-group">
@@ -63,11 +66,15 @@
 		</div>
 
 		<!-- JS -->
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" ></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" ></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
-		<script src="{% static 'js/jquery1.min.js' %}"></script>
 		<script src="{% static 'js/main1.js' %}"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"></script>
+		
+		<script>$('.alert').alert()</script>
 	</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 </html>
