--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
     
     <link rel="stylesheet" href="{% static 'css/flaticon.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     
   </head>
   <body>
@@ -40,9 +41,17 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
+            
 	          <li class="nav-item {% if request.path == index %} active {% endif %}">
-              <a href="{% url 'index' %}" class="nav-link">Home</a>
+              <a  class="nav-link" {% if user.is_authenticated %} 
+                href="../{{ user.username }}"
+              {% else %}
+                href="/"
+              {% endif %}
+              >Home</a>
             </li>
+            
+
 	          <li class="nav-item {% if request.path == about %} active {% endif %}">
               <a href="{% url 'about' %}" class="nav-link">About</a>
             </li>
@@ -61,9 +70,19 @@
 	          <li class="nav-item {% if request.path == contact %} active {% endif %}">
               <a href="{% url 'contact' %}" class="nav-link">Contact</a>
             </li>
+           
             {% if user.is_authenticated %}
-              <li class="nav-item">
-                  <a href="{% url 'logout' %}" class="nav-link">Logout</a>
+              <li class="nav-item" >
+                <div class="dropdown">
+                  <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a href="#" class="nav-link">{{ user.username }}</a>
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="personal">E'lonlar</a>
+                    <a class="dropdown-item" href="#">Edit</a>
+                    <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
+                  </div>
+                </div>
               </li>
             {% else %}
                <li class="nav-item">
