--- a/templates/personal_area/personal_area.html
+++ b/templates/personal_area/personal_area.html
@@ -1,11 +1,15 @@
+{% extends 'base.html' %}
 {% load static %}
+{% block title %} Ecoverde Agents {% endblock title %}
+{% block content %}
+{% comment %} {% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <title>{% block title %}{% endblock title %}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700,800,900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -18,6 +22,7 @@
     
     <link rel="stylesheet" href="{% static 'css/flaticon.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     
   </head>
   <body>
@@ -33,7 +38,7 @@
 
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="{% url 'index'%}">Ecoverde</a>
+	      <a class="navbar-brand" href="{% url 'index' %}">Ecoverde</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -62,14 +67,25 @@
               <a href="{% url 'contact' %}" class="nav-link">Contact</a>
             </li>
             
-              <li class="nav-item">
-                  <a href="{% url 'logout' %}" class="nav-link">Logout</a>
+              <li class="nav-item" >
+				  <div class="dropdown">
+					<button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<a href="#" class="nav-link">log out</a>
+					</button>
+					<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+						<a class="dropdown-item" href="#">E'lonlar</a>
+						<a class="dropdown-item" href="#">Edit</a>
+						<a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
+					</div>
+					</div>
               </li>
           
 	        </ul>
 	      </div>
 	    </div>
-	  </nav>
+	  </nav>  {% endcomment %}
+			
+           
 <section class="hero-wrap hero-wrap-2" style="background-image: url('{% static 'images/bg_1.jpg' %}');" data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
     <div class="container">
@@ -86,47 +102,49 @@
     	<div class="container">
     		
         {% if announcements %}
-		{% for announcement in announcements %}
-		{% csrf_token %}
-        	<div class="col-md-4">
-			
-        		<div class="property-wrap ftco-animate">
-        			<a href="{% url 'properties-single' %}" class="img" style="background-image: url('{{ announcement.image.url }}');">
-        				<div class="rent-sale">
-        					<span class="{% if announcement.type == 'sale' %}sale{% endif %}">{{ announcement.type }}</span>
-        				</div>
-        				<p class="price"><span class="orig-price">{{ announcement.price }}</span></p>
-        			</a>
-        			<div class="text">
-        				<ul class="property_list">
-        					<li><span class="flaticon-bed"></span>3</li>
-        					<li><span class="flaticon-bathtub"></span>2</li>
-        					<li><span class="flaticon-floor-plan"></span>1,878 sqft</li>
-        				</ul>
-        				<h3><a href="#">{{ announcement.title }}</a></h3>
-        				<span class="location">{{ announcement.region }}</span>
-        				<a href="#" class="d-flex align-items-center justify-content-center btn-custom">
-        					<span class="fa fa-link"></span>
-        				</a>
-        				<div class="list-team d-flex align-items-center mt-2 pt-2 border-top">
-        					<div class="d-flex align-items-center">
-	        					<div class="img" style="background-image: url('{{ announcement.image_person.url }}');"></div>
-                    {% for i in user %}
-                    <h3 class="ml-2">{{ i.first_name }} {{ i.last_name }}</h3>
-                    {% endfor %}
-	        				</div>
-	        				<span class="text-right">{{ announcement.date }}</span>
-        				</div>
-        			</div>
-        		</div>
-        	</div>
-        {% endfor %}
+			{% for announcement in announcements %}
+			{% csrf_token %}
+				<div class="col-md-4">
+				
+					<div class="property-wrap ftco-animate">
+						<a href="{% url 'properties-single' %}" class="img" style="background-image: url('{{ announcement.image.url }}');">
+							<div class="rent-sale">
+								<span class="{% if announcement.type == 'sale' %}sale{% endif %}">{{ announcement.type }}</span>
+							</div>
+							<p class="price"><span class="orig-price">{{ announcement.price }}</span></p>
+						</a>
+						<div class="text">
+							<ul class="property_list">
+								<li><span class="flaticon-bed"></span>3</li>
+								<li><span class="flaticon-bathtub"></span>2</li>
+								<li><span class="flaticon-floor-plan"></span>1,878 sqft</li>
+							</ul>
+							<h3><a href="#">{{ announcement.title }}</a></h3>
+							<span class="location">{{ announcement.region }}</span>
+							<a href="#" class="d-flex align-items-center justify-content-center btn-custom">
+								<span class="fa fa-link"></span>
+							</a>
+							<div class="list-team d-flex align-items-center mt-2 pt-2 border-top">
+								<div class="d-flex align-items-center">
+									<div class="img" style="background-image: url('{{ announcement.image_person.url }}');"></div>
+						{% for i in user %}
+						<h3 class="ml-2">{{ i.first_name }} {{ i.last_name }}</h3>
+						{% endfor %}
+								</div>
+								<span class="text-right">{{ announcement.date }}</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			{% endfor %}
         {% else %}
         <h4>E'lonlar mavjud emas!</h4>
         {% endif %}
       </div>
-  </section> 
-  <footer class="ftco-footer ftco-section">
+  </section>
+{% endblock content %}
+
+ {% comment %} <footer class="ftco-footer ftco-section">
 	<div class="container">
 	  <div class="row mb-5">
 		<div class="col-md">
@@ -206,6 +224,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <script src="{% static 'js/jquery-migrate-3.0.1.min.js' %}"></script>
 <script src="{% static 'js/popper.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
+
 <script src="{% static 'js/jquery.easing.1.3.js' %}"></script>
 <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
 <script src="{% static 'js/jquery.stellar.min.js' %}"></script>
@@ -215,8 +234,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <script src="{% static 'js/scrollax.min.js' %}"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
 <script src="{% static 'js/google-map.js' %}"></script>
+
 <script src="{% static 'js/main.js' %}"></script>
   
 </body>
-</html>
-     
+</html> {% endcomment %}
+    
