--- a/templates/add.html
+++ b/templates/add.html
@@ -1,16 +1,27 @@
 {% extends 'base.html' %}
 {% load static %}
-
 {% block title %} Add announcement {% endblock %}
-
-
 {% block content %}
-    <form method="POST">
+
+<section class="hero-wrap hero-wrap-2" style="background-image: url('{% static 'images/bg_1.jpg' %}');" data-stellar-background-ratio="0.5">
+    <div class="overlay"></div>
+    <div class="container">
+        
+      <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
+        <div class="col-md-9 ftco-animate pb-0 text-center">
+            <p class="breadcrumbs"><span class="mr-2"><a href="/">Home <i class="fa fa-chevron-right"></i></a></span> <span>Add Announcement <i class="fa fa-chevron-right"></i></span></p>
+          <h1 class="mb-3 bread">E'lon berish</h1>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="ftco-section ftco-agent">
+
+    <form method="POST" style="width: 400px; margin: 0 auto;">
         {% csrf_token %}
         <label for="title_id">Title</label>
         <input type="text" name="title" id="title_id"><br>
-        <label for="content_id">Content</label>
-        <textarea name="content" id="content_id" cols="30" rows="10"></textarea><br>
+{% comment %} <------------------------------------------> {% endcomment %}
         <label for="region_id">Region</label>
         <select name="region" id="region_id" class="region">
             <option disabled selected>Select the region</option>
@@ -19,13 +30,18 @@
             {% endfor %}
         </select><br>
         <input type="hidden" name="region_id" id="viloyat_id">
+
+{% comment %} <------------------------------------------> {% endcomment %}
         <label for="district_id">District</label>
         <select name="district" id="district_id">
             <option disabled selected>Select the district</option>
         </select><br>
         <input type="hidden" name="district_id" id="tuman_id">
+ {% comment %} <------------------------------------------> {% endcomment %}
+
         <label for="address_id">Address</label>
         <input type="text" name="address" id="address_id"><br>
+ {% comment %} <------------------------------------------> {% endcomment %}       
         <label for="type_id">Type</label>
         <select name="type" id="type_id">
             <option disabled selected>Select type</option>
@@ -33,7 +49,9 @@
             <option>{{type.name}}</option>
             {% endfor %}
         </select><br>
-        <input type="hidden" name="type_id" id="turi">
+        <input type="hidden" name="type_id" id="turi_id">
+ {% comment %} <------------------------------------------> {% endcomment %}
+
         <label for="status_id">Status</label>
         <select name="status" id="status_id">
             <option disabled selected>Select status</option>
@@ -41,39 +59,56 @@
             <option>{{status.name}}</option>
             {% endfor %}
         </select><br>
-        <input type="hidden" name="status_id" id="xolati">
-        <label for="view_id">Views</label>
+        <input type="hidden" name="status_id" id="holati_id">
+ {% comment %} <------------------------------------------> {% endcomment %}
+
+        <label for="view_id">View</label> 
         <select name="view" id="view_id">
             <option disabled selected>Select view</option>
             {% for view in views %}
             <option>{{view.name}}</option>
             {% endfor %}
         </select><br>
-        <input type="hidden" name="view_id" id="korinish">
+        <input type="hidden" name="view_id" id="korinish_id">
+ {% comment %} <------------------------------------------> {% endcomment %}
+
+        <label for="content_id">Content</label>
+        <textarea name="content" id="content_id" cols="30" rows="10"></textarea>
+ {% comment %} <------------------------------------------> {% endcomment %}
+        
+        <label for="image_id">Image</label>
+        <input type="file" name="image" id="image_id"><br>
+ {% comment %} <------------------------------------------> {% endcomment %}
+
         <label for="price_id">Price</label>
-        <input type="number" name="price" id="price_id"><br>
-        <label for="features_id">Features</label>
-        <textarea name="features" id="features_id" cols="30" rows="10"></textarea><br>
-        <label for="img">Image</label>
-        <input type="file" name="image" id="img"><br>
+        <input type="text" name="price" id="price_id"><br>
+ {% comment %} <------------------------------------------> {% endcomment %}
+
+    
         <label for="phone_id">Phone number</label>
-        <input type="text" name="phone" id="phone_id"><br>
+        <input type="number" name="phone" id="phone_id"><br>
+
+{% comment %} <-------------------------------------------> {% endcomment %}
+
+         <label for="person_name">Person_name</label>
+        <input type="text" name="person_name" id="person_name_id">
+
         <button type="submit">OK</button>
     </form>
-    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
     <script>
         
         $(document).ready(function(){
-			var tuman_ids = [], selectedRegionIndex = 0;
+			var tuman_id = [], selectedRegionIndex = 0;
 			var t = '{{ districts|safe }}';
 			var tumanlar = JSON.parse(t);
             $("select.region").change(function(){
-                tuman_ids = [];
+                tuman_id = [];
 				selectedRegionIndex = $(".region option:selected").index();
 				if (selectedRegionIndex > 1) selectedRegionIndex++;
 				var tuman = [];
 				for (var i = 0; i < tumanlar.length; i++){
-					if (selectedRegionIndex == tumanlar[i].fields.region_id) {tuman_ids.push(tumanlar[i].pk);tuman.push(tumanlar[i].fields.name);}
+					if (selectedRegionIndex == tumanlar[i].fields.region_id) {tuman_id.push(tumanlar[i].pk);tuman.push(tumanlar[i].fields.name);}
                 }
 				var tuman_options = "";
 				for (var i = 0; i < tuman.length; i++){
@@ -82,28 +117,29 @@
 				$("#district_id").html(tuman_options);
 				$("#viloyat_id").val(selectedRegionIndex);
                 selectedDistrictIndex = $("#district_id option:selected").index();
-				$("#tuman_id").val(tuman_ids[selectedDistrictIndex]);
+                
+				$("#tuman_id").val(tuman_id[selectedDistrictIndex]);
 			});
             
             $("#district_id").change(function(){
                 selectedDistrictIndex = $("#district_id option:selected").index();
                 console.log(selectedDistrictIndex);
-				$("#tuman_id").val(tuman_ids[selectedDistrictIndex]);
+				$("#tuman_id").val(tuman_id[selectedDistrictIndex]);
             });
             
             $("#type_id").change(function(){
                 selectedTypeIndex = $("#type_id option:selected").index();
-				$("#turi").val(selectedTypeIndex);
+				$("#turi_id").val(selectedTypeIndex);
             });
             
             $("#status_id").change(function(){
                 selectedStatusIndex = $("#status_id option:selected").index();
-				$("#xolati").val(selectedStatusIndex);
+				$("#holati_id").val(selectedStatusIndex);
             });
             
             $("#view_id").change(function(){
                 selectedViewIndex = $("#view_id option:selected").index();
-				$("#korinish").val(selectedViewIndex);
+				$("#korinish_id").val(selectedViewIndex);
 			});
         });
         
