--- a/templates/personal_area/personal_area.html
+++ b/templates/personal_area/personal_area.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %} Ecoverde Agents {% endblock title %}
+{% block title %} Personal Area {% endblock title %}
 {% block content %}
 {% comment %} {% load static %}
 <!DOCTYPE html>
@@ -109,9 +109,9 @@
 					<div class="property-wrap ftco-animate">
 						<a href="{% url 'properties-single' %}" class="img" style="background-image: url('{{ announcement.image.url }}');">
 							<div class="rent-sale">
-								<span class="{% if announcement.type == 'sale' %}sale{% endif %}">{{ announcement.type }}</span>
+								<span class="{% if announcement.type == 'sale' %}sale {% else %} rent {% endif %}">{{ announcement.status }}</span>
 							</div>
-							<p class="price"><span class="orig-price">{{ announcement.price }}</span></p>
+							<p class="price"><span class="orig-price">$ {{ announcement.price }}</span></p>
 						</a>
 						<div class="text">
 							<ul class="property_list">
@@ -126,7 +126,7 @@
 							</a>
 							<div class="list-team d-flex align-items-center mt-2 pt-2 border-top">
 								<div class="d-flex align-items-center">
-									<div class="img" style="background-image: url('{{ announcement.image_person.url }}');"></div>
+									<div class="img" style="background-image: url('{% static 'images/person_1.jpg' %}');"></div>
 						{% for i in user %}
 						<h3 class="ml-2">{{ i.first_name }} {{ i.last_name }}</h3>
 						{% endfor %}
