--- a/templates/personal_area/personal_area.html
+++ b/templates/personal_area/personal_area.html
@@ -93,8 +93,10 @@
       <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
         <div class="col-md-9 ftco-animate pb-0 text-center">
             <p class="breadcrumbs"><span class="mr-2"><a href="/">Home <i class="fa fa-chevron-right"></i></a></span> <span>Announcement <i class="fa fa-chevron-right"></i></span></p>
-          <h1 class="mb-3 bread">E'lonlaringiz</h1>
-        </div>
+          {% for i in user %}
+		  <h1 class="mb-3 bread">Xush kelibsiz ! <br> {{i.first_name}} {{i.last_name}}</h1>
+          {% endfor %}
+		</div>
       </div>
     </div>
   </section>
