--- a/templates/properties-single.html
+++ b/templates/properties-single.html
@@ -20,8 +20,8 @@
       	<div class="row justify-content-center">
       		<div class="col-md-12">
       			<div class="property-details">
-      				<div class="img" style="background-image: url({% static 'images/work-1.jpg' %});">
-      					<a href="https://vimeo.com/45830194" class="img-video popup-vimeo d-flex align-items-center justify-content-center">
+      				<div class="img" style="background-image: url({% static 'images/photo_2019-07-25_23-36-06.jpg' %});">
+      					<a href="https://www.youtube.com/watch?v=AVs0_kW6RZg" class="img-video popup-vimeo d-flex align-items-center justify-content-center">
 			          	<span class="fa fa-play"></span>
 			          </a>
       				</div>
